# wjmmmdvm

./: .gitignore  CLAUDE.md  Cargo.toml  MMDVM-testing.ini  MMDVM.ini  README.org  justfile
ambe_lab/: Cargo.toml  README.org
ambe_lab/src/: ambe_frame.rs  corpus.rs  error.rs  lib.rs  main.rs  md380_emu.rs  stimulus.rs  tone_gen.rs
ambe_lab/src/codec/: ambe_fields.rs  mod.rs  spectral.rs  synth.rs  tables.rs
ambe_lab/src/command/: capture_corpus.rs  decode.rs  decode_rust.rs  diff_ambe.rs  dump_ambe.rs  dump_fields.rs  encode.rs  mod.rs  tone.rs
dmr-rec/: dmr-2026-05-19_14-22-09Z-src2406237-dst724-slot2.pcm
md380_emu_ambed/: Cargo.toml  Cross.toml  README.org  build.rs
md380_emu_ambed/firmware/: README.md  README.org
md380_emu_ambed/src/: codec.rs  firmware.rs  main.rs  protocol.rs  server.rs
md380_emu_ambed/src/command/: decode.rs  encode.rs  mod.rs  serve.rs
mmdvm_sip/: .gitignore  CLAUDE.md  Cargo.toml  README.org  mmdvm_sip.toml.example
mmdvm_sip/src/: ambe_codec_client.rs  config.rs  digest_auth.rs  dmr_listener.rs  error.rs  main.rs  pcm_writer.rs  registration.rs  sip_client.rs  udp_transport.rs
mmdvm_sip/src/command/: echo_dmr.rs  listen_dmr.rs  mod.rs  register.rs
mmdvm_sip/src/dmr/: dmr_alias.rs  dmr_config.rs  dmr_data.rs  dmr_gps.rs  mod.rs  packet.rs  voice_burst.rs
mmdvm_sip/src/fec/: ambe.rs  golay.rs  golay_matrix.rs  mod.rs
scripts/: flash.sh
