[workspace]
resolver = "2"
members = ["mmdvm_sip", "md380_emu_ambed"]

# Only mmdvm_sip is built by default. md380_emu_ambed embeds
# patent-encumbered MD-380 firmware at compile time and is opt-in via
# `cargo build -p md380_emu_ambed` to make accidental distribution
# harder.
default-members = ["mmdvm_sip"]
