[package]
name = "ambe_lab"
version = "0.1.0"
edition = "2024"
publish = false
description = "Research-only AMBE-3000F harness against md380-emu. Not for distribution."

[[bin]]
name = "ambe_lab"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
