[package]
name = "mmdvm_sip"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rsip = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync", "fs", "io-util"] }
md-5 = "0.10"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zerocopy = { version = "0.8", features = ["derive"] }
